k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata: 
  name: postgres
  namespace: mlflow
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: mlflow
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\""]
  volumeClaimTemplates:
  - metadata:
      name: pgdata
    spec:
      storageClassName: local-path-retain
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 2Gi
